--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       </div>
     </div>
   </div>
-  <script src="./index.js"</script>
+  <script>
+    function alertUser() {
+  alert("Hey! It's my first project.....Hoorey!");
+};
+  </script>
 </body>
 </html
