--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
       </div>
     </div>
   </div>
-  <script>
-    function alertUser() {
-  alert("Hey! It's my first project.....Hoorey!");
-};
-  </script>
+  <script src="./index.js"></script>
 </body>
 </html
